# PyTavernier

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.cfg
config/: config_example.toml
docs/: index.md
docs/about/: references.md
docs/doc/dev_doc/: dev_doc_index.md
docs/doc/dev_doc/commands/: flipcoin.md
lib/: tavernierLogger.py
src/: index.py
src/commands/: __init__.py  ping.py  play.py  skip.py
src/events/: on_ready.py
src/lib/: logger.py
src/models/: bot.py
src/models/errors/: music.py
src/models/music/: message_renderer.py  queue.py  queue_manager.py  song_extractor.py
