[tool.poetry]
name = "tavenierpy"
version = "0.1.0"
description = "A discord bot written in python."
authors = ["ippei <dev.brillarm@gmail.com>"]
readme = "docs/index.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
loguru = "^0.7.2"
yt-dlp = "^2024.10.22"
pynacl = "^1.5.0"
youtube-search2 = "^2.1.7"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
flake8 = "^7.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
